--- a/composer.json
+++ b/composer.json
@@ -76,6 +76,9 @@
             "allow-contrib": false,
             "require": "7.0.*",
             "docker": true
+        },
+        "runtime": {
+            "dotenv_overload": true
         }
     },
     "require-dev": {
