--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.docker/docker
+.docker/.env
+.docker/.env.nginx.local
 
 ###> symfony/framework-bundle ###
 /.env.local
@@ -7,7 +10,6 @@
 /public/bundles/
 /var/
 /vendor/
-/docker
 /migrations/*
 ###< symfony/framework-bundle ###
 
