--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
+        "symfony/monolog-bundle": "^3.10",
         "symfony/runtime": "7.0.*",
         "symfony/stimulus-bundle": "^2.13",
         "symfony/twig-bundle": "7.0.*",
